# torch-dehram

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/torch_derham/: __init__.py
src/torch_derham/core/: __init__.py  cochain.py  complex.py  incidence.py
src/torch_derham/core/complex/: __init__.py  cell_indexing.py  chain.py  incidence.py  simplicial.py
src/torch_derham/core/dec/: __init__.py  dual_cells.py  hodge.py
src/torch_derham/core/feec/: __init__.py  assembly.py  geometry.py  inner_product.py  quadrature.py  reference.py
src/torch_derham/core/index/: __init__.py
src/torch_derham/core/metric/: __init__.py  calculus.py  hodge.py  inner_product.py
src/torch_derham/core/ops/: __init__.py
src/torch_derham/core/ops/index/: row.py
src/torch_derham/core/ops/wedge/: __init__.py
src/torch_derham/core/solvers/: __init__.py  cg.py
